- Each data block is mapped to the correct header block. Previously, there
  was a risk of using the wrong header if the file contained data in
  formats other than "Tree" or "Single". Also, the end position
  of any data block could be off if data with different formats was
  present in the file. Presumably the function would have failed with an
  obscure error message.
- Added support for site, tree, code metadata. Results are given as
  an attribute of the return value, named "ids".

File: read.tucson.R
-------------------

- Fixed trimming of all-NA rows
- Fixed a bug that could crash R if the fided-width columns of the input
  file did not follow the (loose) specifications of the Tucson format
- AB: Note to dplR developers that this is a result of a poor standard in
  the Tucson format but this fix is needed to work with files that are
  on the ITRDB. Interestingly, dpl and ARSTAN are more robust to these
  kinds of inconsistencies. Mikko's note: always check that your
  assumptions a piece of input are correct before using the said input
  to compute array indices, particularly in C code.
- Can deal with CR CR LF newlines by reading the whole file into memory
  at first and stripping empty lines
- Can read non-standard files where one or more of the stop markers is
  the 11th data column of its row
- Can read non-standard files where columns don't have their proper
  widths, including tab-delimited files
- Can read non-standard files where missing data is marked with
  non-numeric characters
- Printed summary is justified, no more ragged lines
- Interprets lines containing "#" characters (in positions 1-78) as
  comments. For now, comments are ignored.
- Fixed a bug that could cause mixing of values from two or more
  measurement series sharing the same ID. Now it is an error if the input
  file contains more than one measurement for any year, ID pair.

File: write.tucson.R
--------------------
